Fixed spacing issues in CSS

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -1,6 +1,6 @@
 #editor {
   width: 90%;
-  margin: 20px auto;
+  margin: 0px auto;
   box-shadow: 2px 1px 5px rgba(0,0,0,0.2);
   border: 1px solid #e5e5e5;
   height: 300px;
@@ -35,4 +35,5 @@
 .toolbar-container {
   width: 65%;
   float: left;
+  margin-top: 8px
 }
